# carpathia

./: .env.test  .gitignore  Cargo.toml  DCO.md  NOTICE  README.md
.github/workflows/: dco.yml  test.yml
carpathia-cli/: Cargo.toml  LICENSE  README.md
carpathia-cli/src/: enums.rs  main.rs
carpathia-core/: Cargo.toml  README.md
carpathia-core/src/: lib.rs
carpathia-core/src/cache/: cache_file.rs  cache_structs.rs  mod.rs
carpathia-core/src/configuration/: carpathia_conf.rs  conf_enums.rs  conf_file_reader.rs  conf_structs.rs  mod.rs
carpathia-core/src/db/: db_schema_structs.rs  enrich_adr.rs  mod.rs  parse_db_schema.rs  postgresql.rs  postgresql_structs.rs  traits.rs
carpathia-core/src/generator/: generator_structs.rs  mod.rs  template_engine.rs
carpathia-core/src/return_values/: carpathia_errors.rs  mod.rs
carpathia-core/src/templates/: enum_templates.rs  init_templates.rs  mod.rs
fixtures/: README.md  carpathia_type_mapping.json  db_types_not_mapped.json  pagila-schema-jsonb.sql  pagila_schema.json  pagila_schema_no_user_type_mapping.json
src/: main.rs
src/cache/: cache_file.rs  cache_structs.rs  mod.rs
src/configuration/: carpathia_conf.rs  conf_enums.rs  conf_file_reader.rs  conf_structs.rs  mod.rs
src/db/: db_schema_structs.rs  mod.rs  parse_db_schema.rs  postgresql.rs  postgresql_structs.rs  traits.rs
src/generator/: mod.rs  template_engine.rs
src/return_values/: carpathia_errors.rs  mod.rs
tera/: summary.mod.rs.tera  tables.rs.tera
tera/rust_lib/: summary.mod.rs.tera  tables.rs.tera  views.rs.tera
test_data/: carpatia_test.ddl
