[package]
name = "carpathia"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "DB code generator - to come..."
repository = "https://github.com/sdoerig/carpathia"
homepage = "https://github.com/sdoerig/carpathia"

[dependencies]
tokio = {version = "1", features = ["rt-multi-thread", "macros"]}
serde = "1.0"
sqlx = { version = "0.8", features = [ "postgres", "runtime-tokio", "tls-native-tls" ] }

clap = { version = "4.4", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
