[package]
name = "carpathia"
version = "0.2.0"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "Drafty DB code generator for postgres - learing"
repository = "https://github.com/sdoerig/carpathia"
homepage = "https://github.com/sdoerig/carpathia"
categories = ["command-line-utilities", "database"]

[dependencies]
tokio = {version = "1", features = ["rt-multi-thread", "macros"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = [ "postgres", "runtime-tokio", "tls-native-tls" ] }
sha2 = "0.10"
hex = "0.4"
clap = { version = "4.4", features = ["derive"] }
log = "0.4"
env_logger = "0.10"


