[package]
name = "carpathia"
version = "0.2.1-alpha.4"
edition = "2024"
license = "Apache-2.0"
authors = ["Stefan Dörig", "sdoerig@bluewin.ch"]
description = "Database schema parser and language agnostic generator"
repository = "https://github.com/sdoerig/carpathia"
homepage = "https://github.com/sdoerig/carpathia"
categories = ["command-line-utilities", "database"]

[dependencies]
carpathia-core = { path = "../carpathia-core" }
tokio = {version = "1", features = ["rt-multi-thread", "macros"]}
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
log = "0.4"
env_logger = "0.10"


[dev-dependencies]
dotenv = "0.15"
tempfile = "3.8"
